[package]
name = "ferric-macros"
version = "0.1.0"
edition = "2021"
authors = ["Nimar Arora <nimar.arora@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Probablistic Programming Language with a declarative syntax for random variables."
readme = "../README.md"
repository = "https://github.com/ferric-ai/ferric"
homepage = "https://ferric.ai"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = {features = ["full"], version="1.0.0"}
rand = "0.8.0"
