[package]
name = "ferric"
version = "0.1.2"
edition = "2021"
authors = ["Nimar Arora <nimar.arora@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Probablistic Programming Language with a declarative syntax for random variables."
readme = "../README.md"
repository = "https://github.com/ferric-ai/ferric"
homepage = "https://ferric.ai"
keywords = ["probabilistic", "programming", "generative", "bayesian", "mcmc"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferric-macros = {path="../ferric-macros", version = "0.1.0"}
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
ferric = {path="../ferric"}
trybuild = "1.0"
